--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,8 @@
   "HEADER": {
     "ABOUT_ME": "Über mich",
     "SKILLS": "Fähigkeiten",
-    "PROJECTS": "Projekte"
+    "PROJECTS": "Projekte",
+    "HOME": "Startseite"
   },
 
   "ABOVE": {
