--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,8 @@
   "HEADER": {
     "ABOUT_ME": "About me",
     "SKILLS": "Skills",
-    "PROJECTS": "Projects"
+    "PROJECTS": "Projects",
+    "HOME": "Home"
   },
 
   "ABOVE": {
