--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -86,6 +86,7 @@
     "MESSAGE": "How can I help you?",
     "MESSAGE_PLACEHOLDER": "Hello Daniel, I am interested in...",
     "MESSAGE_ERROR": "What do you need to develop?",
+    "MESSAGE_SENT": "Message sent successfully!",
     "CHECKBOX_1": "I've read the",
     "CHECKBOX_2": "and agree to the processing of my data as outlined.",
     "PRIVACY_POLICY": "privacy policy",
