--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -118,7 +118,7 @@
   },
 
   "LEGAL_NOTICE": {
-    "TITLE": "Impressum",
+    "TITLE": "Rechtlicher Hinweis",
     "H3_IMPRINT": "Impressum",
     "IMPRINT": "<ul><li>Daniel Tran</li><li>Wellenkampstraße 15</li><li>80933 München</li></ul>",
     "H3_EXPLORING": "Kontakt",
