Toast message send

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -86,7 +86,8 @@
     "MESSAGE": "Wie kann ich dir helfen?",
     "MESSAGE_PLACEHOLDER": "Hallo Daniel, ich interessiere mich für...",
     "MESSAGE_ERROR": "Was soll entwickelt werden?",
-    "MESSAGE_SENT": "Nachricht erfolgreich gesendet!",
+    "MESSAGE_SENT": "Ihre Nachricht wurde gesendet. <br> Ich melde mich binnen 24 Stunden.",
+    "MESSAGE_THX": "Danke,",
     "CHECKBOX_1": "Ich habe die",
     "CHECKBOX_2": "gelesen und stimme der Verarbeitung meiner Daten wie beschrieben zu.",
     "PRIVACY_POLICY": "Datenschutzerklärung",
