--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -42,6 +42,7 @@
   "PORTFOLIO": {
     "FEATURED": "Ausgewählte Projekte",
     "EXPLORE": "Entdecke hier eine Auswahl meiner Arbeiten – Interagiere mit den <br> Projekten, um meine Fähigkeiten in Aktion zu sehen.",
+    "ARIA": "Schau im detail das",
     "DIALOG": {
       "ABOUT": "Worum geht es in diesem Projekt?",
       "PREVIOUS": "Zurück",
