Some text update

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -115,7 +115,7 @@
     "H3_CHANGES": "Änderungen dieser Datenschutzerklärung",
     "CHANGES": "Ich kann diese Datenschutzerklärung von Zeit zu Zeit aktualisieren, um Änderungen gesetzlicher Anforderungen oder technischer Gegebenheiten zu berücksichtigen. Aktualisierungen werden auf dieser Seite veröffentlicht.",
     "H3_CONTACT": "Kontakt",
-    "CONTACT": "Bei Fragen zu dieser Datenschutzerklärung kontaktieren Sie mich bitte unter <a href='mailto:danietr99@gmail.com'>danietr99@gmail.com</a>.",
+    "CONTACT": "Bei Fragen zu dieser Datenschutzerklärung kontaktieren Sie mich bitte unter <a href='mailto:webmaster@daniel-tran.com'>webmaster@daniel-tran.com</a>.",
     "DATE": "Datum: 26. Juli 2025"
   },
 
@@ -124,21 +124,21 @@
     "H3_IMPRINT": "Impressum",
     "IMPRINT": "<ul><li>Daniel Tran</li><li>Wellenkampstraße 15</li><li>80933 München</li></ul>",
     "H3_EXPLORING": "Kontakt",
-    "EXPLORING": "E-Mail: <a href='mailto:danietr99@gmail.com'>danietr99@gmail.com</a>",
+    "EXPLORING": "E-Mail: <a href='mailto:webmaster@daniel-tran.com'>webmaster@daniel-tran.com</a>",
     "H3_ACCEPTANCE": "Akzeptanz der Bedingungen",
-    "ACCEPTANCE": "Durch den Zugriff auf und die Nutzung von <span class='highlight'>Portfolio</span> (Produkt) erkennen Sie die folgenden Geschäftsbedingungen und alle Richtlinien, Leitlinien oder Änderungen an, die Ihnen von Zeit zu Zeit vorgelegt werden können. Wir, die aufgeführten Studenten, können die Bedingungen jederzeit ohne vorherige Ankündigung ändern.",
+    "ACCEPTANCE": "Durch den Zugriff auf und die Nutzung von <span class='highlight'>Portfolio</span> (Produkt) erkennen Sie die folgenden Geschäftsbedingungen und alle Richtlinien, Leitlinien oder Änderungen an, die Ihnen von Zeit zu Zeit vorgelegt werden können. Ich könnte die Bedingungen jederzeit ohne vorherige Ankündigung ändern.",
     "H3_SCOPE": "Umfang und Eigentum des Produkts",
-    "SCOPE": "<span class='highlight'>Portfolio</span> wurde im Rahmen eines Studentenprojekts in einem Webentwicklungs-Bootcamp an der <span class='highlight'>Developer Akademie GmbH</span> entwickelt. Es hat einen Bildungszweck und ist nicht für umfangreiche persönliche oder geschäftliche Nutzung vorgesehen. Daher können wir keine gleichbleibende Verfügbarkeit, Zuverlässigkeit, Genauigkeit oder andere Qualitätsaspekte garantieren.",
+    "SCOPE": "<span class='highlight'>Portfolio</span> wurde im Rahmen eines Studentenprojekts in einem Webentwicklungs-Bootcamp an der <span class='highlight'>Developer Akademie GmbH</span> entwickelt.",
     "SCOPE_2": "Das Design von <span class='highlight'>Portfolio</span> gehört der <span class='highlight'>Developer Akademie GmbH</span>. Die unbefugte Nutzung, Vervielfältigung, Modifikation, Verbreitung oder Reproduktion des Designs ist strengstens untersagt.",
     "H3_PROPRIETARY": "Eigentumsrechte",
-    "PROPRIETARY": "Abgesehen vom Design, das der <span class='highlight'>Developer Akademie GmbH</span> gehört, behalten wir, die aufgeführten Studenten, alle Eigentumsrechte an <span class='highlight'>Portfolio</span>, einschließlich aller damit verbundenen <a href='#'>urheberrechtlich geschützten Materialien, Marken und anderen proprietären Informationen</a>.",
+    "PROPRIETARY": "Abgesehen vom Design, das der <span class='highlight'>Developer Akademie GmbH</span> gehört, behalte Ich alle Eigentumsrechte an <span class='highlight'>Portfolio</span>, einschließlich aller damit verbundenen <a href='#'>urheberrechtlich geschützten Materialien, Marken und anderen proprietären Informationen</a>.",
     "H3_USE": "Nutzung des Produkts",
     "USE": "<span class='highlight'>Portfolio</span> darf nur für rechtmäßige Zwecke genutzt werden, gemäß allen geltenden Gesetzen und Vorschriften. Jede Nutzung von <span class='highlight'>Portfolio</span> für illegale Aktivitäten oder um andere Personen zu belästigen, zu schädigen, zu bedrohen oder einzuschüchtern, ist strengstens untersagt. Sie sind allein verantwortlich für Ihre Interaktionen mit anderen Nutzern von <span class='highlight'>Portfolio</span>.",
     "H3_DISCLAIMER": "Haftungsausschluss und Haftungsbeschränkung",
-    "DISCLAIMER": "<span class='highlight'>Portfolio</span> wird 'wie besehen' bereitgestellt, ohne jegliche ausdrückliche oder stillschweigende Garantie, einschließlich, aber nicht beschränkt auf die stillschweigenden Garantien der Marktgängigkeit, Eignung für einen bestimmten Zweck und Nichtverletzung. Weder wir, die aufgeführten Studenten, noch die Developer Akademie haften für direkte, indirekte, zufällige, spezielle, Folgeschäden oder beispielhafte Schäden, einschließlich, aber nicht beschränkt auf, Schäden durch entgangene Gewinne, Goodwill, Nutzung, Daten oder andere immaterielle Verluste, selbst wenn wir auf die Möglichkeit solcher Schäden hingewiesen wurden, die aus der Nutzung oder Leistung von <span class='highlight'>Portfolio</span> entstehen.",
+    "DISCLAIMER": "<span class='highlight'>Portfolio</span> wird 'wie besehen' bereitgestellt, ohne jegliche ausdrückliche oder stillschweigende Garantie, einschließlich, aber nicht beschränkt auf die stillschweigenden Garantien der Marktgängigkeit, Eignung für einen bestimmten Zweck und Nichtverletzung. Weder Ich noch die Developer Akademie haften für direkte, indirekte, zufällige, spezielle, Folgeschäden oder beispielhafte Schäden, einschließlich, aber nicht beschränkt auf, Schäden durch entgangene Gewinne, Goodwill, Nutzung, Daten oder andere immaterielle Verluste, selbst wenn wir auf die Möglichkeit solcher Schäden hingewiesen wurden, die aus der Nutzung oder Leistung von <span class='highlight'>Portfolio</span> entstehen.",
     "H3_INDEMNITY": "Entschädigung",
-    "INDEMNITY": "Sie erklären sich damit einverstanden, uns, die aufgeführten Studenten, die Developer Akademie und unsere Partner, Mitarbeiter, Direktoren, Vertreter und Angestellten von allen Ansprüchen, Verlusten, Schäden, Kosten oder Haftungen (einschließlich angemessener Anwaltskosten) freizustellen, zu verteidigen und schadlos zu halten, die aus Ihrer Nutzung von <span class='highlight'>Portfolio</span> und/oder Ihrem Verstoß gegen dieses Impressum entstehen.",
-    "CONTACT": "Für Fragen oder Mitteilungen kontaktieren Sie uns bitte unter <a href='mailto:danietr99@gmail.com'>danietr99@gmail.com</a>.",
+    "INDEMNITY": "Sie erklären sich damit einverstanden, Mir, die Developer Akademie und unsere Partner, Mitarbeiter, Direktoren, Vertreter und Angestellten von allen Ansprüchen, Verlusten, Schäden, Kosten oder Haftungen (einschließlich angemessener Anwaltskosten) freizustellen, zu verteidigen und schadlos zu halten, die aus Ihrer Nutzung von <span class='highlight'>Portfolio</span> und/oder Ihrem Verstoß gegen dieses Impressum entstehen.",
+    "CONTACT": "Für Fragen oder Mitteilungen kontaktieren Sie uns bitte unter <a href='mailto:webmaster@daniel-tran.com'>webmaster@daniel-tran.com</a>.",
     "DATE": "Datum: 26. Juli 2025"
   },
 
