--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,7 +115,7 @@
     "H3_CHANGES": "Changes to this Privacy Policy",
     "CHANGES": "I may update this Privacy Policy from time to time to reflect changes in legal requirements or technical setup. Updates will be published on this page.",
     "H3_CONTACT": "Contact",
-    "CONTACT": "For any questions regarding this Privacy Policy, please contact me at <a href='mailto:danietr99@gmail.com'>danietr99@gmail.com</a>.",
+    "CONTACT": "For any questions regarding this Privacy Policy, please contact me at <a href='mailto:webmaster@daniel-tran.com'>webmaster@daniel-tran.com</a>.",
     "DATE": "Date: July 26, 2025"
   },
 
@@ -124,21 +124,21 @@
     "H3_IMPRINT": "Imprint",
     "IMPRINT": "<ul><li>Daniel Tran</li><li>Wellenkampstraße 15</li><li>80933 München</li></ul>",
     "H3_EXPLORING": "Exploring the Board",
-    "EXPLORING": "Email: <a href='mailto:danietr99@gmail.com'>danietr99@gmail.com</a>",
+    "EXPLORING": "Email: <a href='mailto:webmaster@daniel-tran.com'>webmaster@daniel-tran.com</a>",
     "H3_ACCEPTANCE": "Acceptance of terms",
-    "ACCEPTANCE": "By accessing and using <span class='highlight'>Portfolio</span> (Product), you acknowledge and agree to the following terms and conditions, and any policies, guidelines, or amendments thereto that may be presented to you from time to time. We, the listed students, may update or change the terms and conditions from time to time without notice.",
+    "ACCEPTANCE": "By accessing and using <span class='highlight'>Portfolio</span> (Product), you acknowledge and agree to the following terms and conditions, and any policies, guidelines, or amendments thereto that may be presented to you from time to time. I may update or change the terms and conditions from time to time without notice.",
     "H3_SCOPE": "Scope and ownership of the product",
-    "SCOPE": "<span class='highlight'>Portfolio</span> has been developed as part of a student group project in a web development bootcamp at the <span class='highlight'>Developer Akademie GmbH</span>. It has an educational purpose and is not intended for extensive personal & business usage. As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect of quality regarding this Product.",
+    "SCOPE": "<span class='highlight'>Portfolio</span> has been developed as part of a student project in a web development bootcamp at the <span class='highlight'>Developer Akademie GmbH</span>.",
     "SCOPE_2": "The design of <span class='highlight'>Portfolio</span> is owned by the <span class='highlight'>Developer Akademie GmbH</span>. Unauthorized use, reproduction, modification, distribution, or replication of the design is strictly prohibited.",
     "H3_PROPRIETARY": "Proprietary rights",
-    "PROPRIETARY": "Aside from the design owned by <span class='highlight'>Developer Akademie GmbH</span>, we, the listed students, retain all proprietary rights in <span class='highlight'>Portfolio</span>, including any associated <a href='#'>copyrighted material, trademarks, and other proprietary information</a>.",
+    "PROPRIETARY": "Aside from the design owned by <span class='highlight'>Developer Akademie GmbH</span>, I retain all proprietary rights in <span class='highlight'>Portfolio</span>, including any associated <a href='#'>copyrighted material, trademarks, and other proprietary information</a>.",
     "H3_USE": "Use of the product",
     "USE": "<span class='highlight'>Portfolio</span> is intended to be used for lawful purposes only, in accordance with all applicable laws and regulations. Any use of <span class='highlight'>Portfolio</span> for illegal activities, or to harass, harm, threaten, or intimidate another person, is strictly prohibited. You are solely responsible for your interactions with other users of <span class='highlight'>Portfolio</span>.",
     "H3_DISCLAIMER": "Disclaimer of warranties and limitation of liability",
-    "DISCLAIMER": "<span class='highlight'>Portfolio</span> is provided 'as is' without warranty of any kind, whether express or implied, including but not limited to the implied warranties of merchantability, fitness for a particular purpose, and non-infringement. In no event will we, the listed students, or the Developer Akademie, be liable for any direct, indirect, incidental, special, consequential or exemplary damages, including but not limited to, damages for loss of profits, goodwill, use, data, or other intangible losses, even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of <span class='highlight'>Portfolio</span>.",
+    "DISCLAIMER": "<span class='highlight'>Portfolio</span> is provided 'as is' without warranty of any kind, whether express or implied, including but not limited to the implied warranties of merchantability, fitness for a particular purpose, and non-infringement. In no event will I or the Developer Akademie, be liable for any direct, indirect, incidental, special, consequential or exemplary damages, including but not limited to, damages for loss of profits, goodwill, use, data, or other intangible losses, even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of <span class='highlight'>Portfolio</span>.",
     "H3_INDEMNITY": "Indemnity",
-    "INDEMNITY": "You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and our affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of <span class='highlight'>Portfolio</span> and/or your breach of this Legal Notice.",
-    "CONTACT": "For any questions or notices, please contact us at <a href='mailto:danietr99@gmail.com'>danietr99@gmail.com</a>.",
+    "INDEMNITY": "You agree to indemnify, defend and hold harmless us, Me and the Developer Akademie, and our affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of <span class='highlight'>Portfolio</span> and/or your breach of this Legal Notice.",
+    "CONTACT": "For any questions or notices, please contact us at <a href='mailto:webmaster@daniel-tran.com'>webmaster@daniel-tran.com</a>.",
     "DATE": "Date: July 26, 2025"
   },
 
